--- a/_posts/2018-09-14-macOS_개발환경.md
+++ b/_posts/2018-09-14-macOS_개발환경.md
@@ -140,9 +140,9 @@ plugins=(
   zsh-syntax-highlighting
   zsh-autosuggestions
 )
-```
-
-
-- 위의 글의 내용들은 [subicura
-](https://subicura.com/2017/11/22/mac-os-development-environment-setup.html)님의 글을 참고하여 작성하였습니다. 이곳의 글에서 제가 필요한 부분만을 발췌하여 작성한 것이므로 더 많은 정보와 자세한 내용은 [subicura
-](https://subicura.com/2017/11/22/mac-os-development-environment-setup.html)님의 블로그를 참고하시면 좋을 것 같습니다.
+```  
+#
+---
+#
+> 위의 글의 내용들은 [lhy](https://lhy.kr/)강사님의 강의와 블로그, [subicura
+](https://subicura.com/)님의 글을 참고하여 작성하였습니다. 
