--- a/_posts/파일 입출력.md
+++ b/_posts/파일 입출력.md
@@ -36,3 +36,63 @@ b | 이진데이터 타입
 > 텍스트 역시 이진데이터의 일종이지만, 데이터의 구조가 인코딩과 개행문자 등 텍스트 형태로 바로 사용할 수 있게 되어있다는 차이가 있다. 
 
 - 파일을 열고 사용한 뒤에는 파일을 반드시 닫아야한다.
+
+
+파일의 정확한 경로의 값을 구하는 방법 
+
+	os.path.abspath(__file__) 
+
+특정 경로의 상위 폴더로 이동
+	
+	os.path.dirname(<경로>)
+   
+특정 경로에서 하위 폴더 또는 하위 파일을 나타냄
+
+	os.path.join(<경로>, '<폴더/파일명>')
+	
+	마지막에 여러개를 한꺼번에 쓰는 것도 가능하다 
+	ex) os.path.join(<경로>, '최상위 폴더', '상위 폴더', '원하는 파일')
+
+파일 객체를 참조하는 방법
+
+```
+1.
+with open(path, 'rt') as f:
+	content = f.read()
+
+2.
+f = open(path, 'rt')
+content = f.read()
+f.close()
+
+
+3.
+content = open(pathm, 'rt').read()
+```
+> 3.에서 파일 객체라는 것도 결국 변수를 가리키는 것이기 때문에 그 객체를 가리키는 변수가 사라지면 자동으로 사라진다 
+
+
+### BeautifulSoiop
+
+- find_all('a')
+
+`<a>` Tag가 들어간 row를 찾아준다 
+
+- soup.p['class']
+
+`<p>` Tag의 class 속성값을 보여준다
+
+```
+for link in soup.find_all('a')
+	soup.get('href')
+	
+> https://www.naver.com
+
+<a href="https://www.naver.com"></a>
+
+```
+
+- row의 text속성만 빼온다
+
+get.text(strip=True)
+
