Modifed, add AWS, Docker 정리 추가

--- a/_posts/2018-09-28-Django수업 정리.md
+++ b/_posts/2018-09-28-Django수업 정리.md
@@ -47,7 +47,8 @@ content = open(pathm, 'rt').read()
 1번째 인수로 자신의 view의 첫 번째 매개변수인 request를 전달<br>
 2번째 인수로 템플릿파일의 경로를 전달<br>
 3번째 인수(선택)로 dict를 전달<br>
--> 템플릿파일의 경로에 있는 HTML을 가져와서 {{ 변수 }}와 같은 부분들에 동적으로 문자열을 생성<br>
+
+-> 템플릿파일의 경로에 있는 HTML을 가져와서 \{\{ \}\}와 같은 부분들에 동적으로 문자열을 생성<br>
 생성된 결과를 HttpResponse로 돌려줌, 브라우저는 해당 결과를 받아 사용자에게 보여주게 됨
 
 장고 쉘
