add file Deploy-2.md

--- a/_posts/2018-11-01-Deploy-1.md
+++ b/_posts/2018-11-01-Deploy-1.md
@@ -1,5 +1,5 @@
 ---
-title: "AWS명령어 및 Docker 시작하기"
+title: "Deploy(1) - AWS명령어 및 Docker시작하기"
 categories: 
   - Dev
 tags:
@@ -272,24 +272,28 @@ ec2-deploy
 
 ```
 # Docker를 ubuntu(v.18.04)에서 실행
-FROM    		ubuntu:18.04
+FROM    	ubuntu:18.04
 MAINTAINER 	dreamong91@gmail
 
 # -y 속성은 설치 도중 yes/no 가 나왔을 때 자동으로 yes를 선택하는 옵션
-RUN				apt -y update
-RUN 			apt -y dist-upgrade
-RUN				apt -y install python3-pip
+RUN		apt -y update
+RUN 		apt -y dist-upgrade
+RUN		apt -y install python3-pip
 
 # 현재 Django의 위치(ec2-deploy)의 파일들을 docker의 /srv/project/ 경로에 복사
-COPY 			.	/srv/project/
+COPY		./srv/project/
+
 # /srv/project 로 이동
 WORKDIR		/srv/project
+
 # 이동한 위치에서 requirements.txt 안에 pip3 패키지들을 설치
-RUN				pip3 install -r requirements.txt
+RUN		pip3 install -r requirements.txt
 
 WORKDIR		/srv/project/app
+
 # 이동한 위치에서 runserver 실행
-CMD				python3 manage.py runserver 0:8000
+CMD		python3 manage.py runserver 0:8000
+
 ```
 
 위의 Dockerfile 설정을 한 후에 아래의 명령어를 통해 docker의 컨테이너에 필요한 환경을 셋팅한다.
