--- a/_posts/2018-11-02-Deploy-2.md
+++ b/_posts/2018-11-02-Deploy-2.md
@@ -243,13 +243,6 @@ server {
         uwsgi_pass  unix:///tmp/app.sock;
         include     uwsgi_params;
     }
-
-    location /static/ {
-        alias /srv/project/.static/;
-    }
-    location /media/ {
-        alias /srv/project/.media/;
-    }
 }
 ```
 
@@ -402,21 +395,52 @@ vacuum = true
 chown-socket = www-data
 ``` 
 
+여기까지의 설정을 정리하면 다음과 같다. 
 
+```
+Host(7000)
+	Container(80)
+		Nginx
+			URL ('/')
+				/tmp/app.socket
+					uWSGI
+						config.wsgi
+							Django
+```
+Host(7000) 으로 온 요청이 Container(80)으로 들어와서 Nginx으로 들어온 다음 Root URL이 ('/')인 경우에 /tmp/app.socket을 이용해서 uWSGI와 연결이 되고 config.wsgi을 통해 Django와 연결이 
+된 것이다.
 
+그러나 아직 static, media 경로를 통해 들어온 파일들에 대한 처리가 되지 않는다. 이 설정을 하기위해 app.nginx파일에 local 설정을 추가해준다. 
 
+```
+# app.nginx
 
+server {
+    # 80번 포트로부터 받은 요청을 처리
+    listen 80;
+    # 도메인이 'localhost'에 해당 할 때
+    server_name localhost;
+    # 인코딩 방식
+    charset utf-8;
+    # request/response의 최대 사이즈
+    # (기본값이 매우 작음)
+    client_max_body_size 128M;
 
+    #('/'부터 시작) -> 모든 URL연결에 대해
+    location / {
+        # uwsgi와의 연결에 unix소켓을 사용
+        # "/tmp/app.sock"파일을 사용
+        uwsgi_pass  unix:///tmp/app.sock;
+        include     uwsgi_params;
+    }
 
-nginx설정파일의 경우에는 /etc/nginx/sites-available에 들어있다.
+    location /static/ {
+        alias /srv/project/.static/;
+    }
+    location /media/ {
+        alias /srv/project/.media/;
+    }
+}
+```
 
-
-
-
-
-Dockerfile과 app.nginx, uwsgi.ini 두 파일에 각각 명령어 및 코드 작성 후 두개의 터미널에서 docker 연결한뒤 각 터미널에 순서대로 입력. 
-
-docker build -t ec2-deploy -f Dockerfile .
-docker run --rm -it -p 7000:80 --name ec2 ec2-deploy /bin/bash
-uwsgi --ini /srv/project/.config/uwsgi.ini
-docker exec -it ec2 /bin/bash
+alias를 이용해서 static과 media 경로를 통해 들어온 파일들을 Django까지 가지않고 alias설정해준 경로에서 처리하게 한다.
