deploy2 file upload

--- a/_posts/2018-11-02-Deploy-2.md
+++ b/_posts/2018-11-02-Deploy-2.md
@@ -5,6 +5,7 @@ categories:
 tags:
     - mac
     - AWS
+    - RDS
     - Docker
 author_profile: true
 
@@ -128,12 +129,8 @@ WSGI_APPLICATION = 'config.wsgi.application'
 # https://docs.djangoproject.com/en/2.1/ref/settings/#databases
 DATABASES = {
     'default': {
-        'ENGINE': 'django.db.backends.postgresql',
-        'HOST': 'wps9th.cksojujm6f2c.ap-northeast-2.rds.amazonaws.com',
-        'NAME': 'dreamong91',
-        'USER': 'dreamong91',
-        'PASSWORD': 'dlstjs12',
-        'PORT': 5432,
+        'ENGINE': 'django.db.backends.sqlite3',
+        'NAME': os.path.join(BASE_DIR, 'db.sqlite3'),
     }
 }
 
@@ -444,3 +441,75 @@ server {
 ```
 
 alias를 이용해서 static과 media 경로를 통해 들어온 파일들을 Django까지 가지않고 alias설정해준 경로에서 처리하게 한다.
+
+
+### AWS RDS 설정
+
+RDS는 Amazon Relational Database Service(RDS)의 약자이다. 이 RDS를 사용하면 클라우드에서 관계형 데이터베이스를 더 간편하게 설정, 운영 및 확장할 수 있다. 이 Amazon RDS는 여러 데이터베이스 서비스를 제공하지만 우리는 PostgreSQL을 사용한다. 
+
+![중앙에 Amazon RDS 시작하기](/assets/deploy/amazon_rds_home.png)
+
+먼저 [아마존 사이트](https://console.aws.amazon.com/)에 접속하여 로그인을 해주고 AWS서비스에서 RDS를 검색하여 찾아 들어온다. 그리고 Amazon RDS 시작하기를 클릭하여 들어온다. 
+
+> 지역 설정이 꼭 `아시아 태평양(서울)`로 되어있는지 확인한다.
+
+- 엔진 선택
+
+그리고 엔진 옵션에서 PostgreSQL을 선택하고 __RDS 프리티어에 적용되는 옵션만 사용__을 __꼭__ 체크한다. 그리고 다음을 누른다.
+
+> RDS 프리티어에 적용되느니 옵션을 사용하지 않으면 초과 과금이 붙을 수 있다. 
+
+![엔진 옵션 & RDS 프리티어 적용 옵션](/assets/deploy/amazon_option.png)
+
+- DB 세부 정보 지정
+
+설정 메뉴에 대한 내용들을 지정해준다. 이때 마스터 사용자 이름과 마스터 암호는 절대 잊어버리면 안되므로 평소 자주 사용하는 것으로 지정해주는 것이 좋다. 그리고 다음 버튼을 눌러서 넘어간다. 
+
+> 이 페이지에서 '다중 AZ 배포'라는 것이 있는데 동시에 여러 유저들이 접속했을 때 지연 시간을 최소화하기위해 여러곳에 복제본을 만드는 것이다. 당연히 만들때 돈이 들어가기 때문에 프리티어 적용을 해놓으면 설정할 수 없다. 
+
+![DB 세부 정보 설정](/assets/deploy/amazon_settings.png)
+
+- 고급 설정 구성
+
+여기서는 두가지 설정을 해주면 된다. 퍼블릭 액세스 가능성과 VPC 보안 그룹 항목이다. 데이터 베이스 서버는 기본적으로 퍼블릭 액세스를 막아놓는다. 데이터베이스 자체에 중요한 정보를 보관할 가능성이 높기 때문. 그래서 아마존에서는 VPC안에서만 접근 가능하도록 만들 수 있다. 그 외에는 관리자가 관리자 콘솔에서 관리만 가능하게 해놓는다. VPC안에 있는 EC2가 뚫리지 않는 이상 보안이 확보되는 것이다. 
+
+기존 VPC 그룹이 아닌 새로운 VPC 그룹으로 만들어야 하는데 보안 그룹에서 새로운 보안 그룹을 생성하고 다시  이 과정을 거쳐서 새 VPC그룹을 설정해 준다. 그리고 마지막으로 데이터베이스 옵션에 데이터베이스 이름은 지정해주지 않아도 되긴 하지만 Django Project의 이름을 써준다.(Django Project로 실습을 하고 있기 때문) 그리고 생성 버튼을 눌러서 DB인스턴스를 생성한다. 
+
+> 새로만든 보안그룹에서 따로 설정해 줄 부분은 없지만 우리는 Deploy를 연습하는 단계기 때문에 인바운드 설정을 해준다. 인바운드 규칙 편집에서 소스 부분을 '내 IP'로 바꾸어준다. 외부에서 접근하는 것을 차단시키는 것이다. 
+
+![고급 설정 구성](/assets/deploy/amazon_db.png)
+
+그리고 이제 다시 PyCharm으로 으로 돌아와서 settings.dev.py에 `DATABASES`설정을 다시 해준다. 
+
+```
+# Database
+# https://docs.djangoproject.com/en/2.1/ref/settings/#databases
+DATABASES = {
+    'default': {
+        'ENGINE': 'django.db.backends.postgresql',
+        'HOST': 'wps9th.cksojujm6f2c.ap-northeast-2.rds.amazonaws.com',
+        'NAME': 'dreamong91',
+        'USER': '<본인이 설정한 ID>',
+        'PASSWORD': '<본인이 설정한 password>',
+        'PORT': 5432,
+    }
+}
+
+```
+그리고 이제 인스턴스가 완성된 것을 확인하고 실제 데이터베이스를 setting 한다. 방법은 다음과 같다. 
+
+ 
+
+```
+ec2-deploy/app
+
+# psycopg2-binary가 이미 설치되어있다면 넘어가도 좋다.
+$ pip install psycopg2-binary
+
+$ export DJANGO_SETIINGS_MODULE=config.settings.dev
+$ ./manage.py migrate
+
+```
+위 명령어를 실행했을 때 정상적으로 migrate가 되면 정상 작동 된 것이다. 
+
+
