--- a/_posts/2018-11-02-Deploy-2.md
+++ b/_posts/2018-11-02-Deploy-2.md
@@ -1,5 +1,5 @@
 ---
-title: "Deploy(2) - "
+title: "Deploy(2) - uWSGI와 Nginx"
 categories: 
   - Dev
 tags:
@@ -7,6 +7,10 @@ tags:
     - AWS
     - RDS
     - Docker
+    - uWSGI
+    - Nginx
+    - Database
+    - postgreSQL
 author_profile: true
 
 toc: true
@@ -27,6 +31,8 @@ nginx는 외부에서 오는 요청을 처리하는 데 특화가 되어있다. 
 	request  ->  Container  ->  Nginx  ->  uWSGI(Unix Socket)  ->  Django
 
 처음 요청이 들어오면 도커에 있는 컨테이너로 보낸다. 이 컨테이너에서 받은 요청을 Nginx로 보내주고 uWSGI를 거쳐서 Django로 들어간다. 
+
+### Docker에 Nginx와 uWSGI 설치
 
 Nginx와 uWSGI를 도커에서 실행하기위해 지난 포스트에서 했던 ec2-deploy프로젝트의 Dockerfile를 다음과 같이 수정해준다. 
 
@@ -77,7 +83,9 @@ CMD		python3 manage.py runserver 0:8000
 	
 	root@dockerID/PATH:/srv/project/app# uwsgi
 	
-정상적으로 uwsgi가 설치되었다면 Command not found가 나타나지 않는다. 정상적으로 설치가 끝났다면 uwsgi설정을 해준다. 설정 방법은 다음과 같다. 
+### uWSGI setting
+
+정상적으로 uwsgi가 설치되었다면 Command not found가 나타나지 않는다. 정상적으로 설치가 끝났다면 uWSGI설정을 해준다. 설정 방법은 다음과 같다. 
 
 ```
 # 설정 방법
@@ -373,6 +381,9 @@ RUN         ln -sf /etc/nginx/sites-available/app.nginx \
 
 하지만 이러한 에러가 나와도 백그라운드에서 존재하는 nginx의 에러 메세지를 볼 수가 없다. nginx는 이러한 에러 메세지를 파일 형태로 보여주는데 이 에러 메세지는 `/var/log/nginx`에 저장된다. 이 경로에 가보면 error.log파일이 있다. cat 명령어를 통해 출력해보면 에러 메세지들이 나온다.
 
+### permission denied Error
+
+
 docker안에서 `ps -aux`명령어를 입력하면 작업관리자 같은 내용이 쭉 나온다. 이 명령어는 유저 정보를 같이 보여주는데, 위에서 나온 502에러같은 경우 __www-data__ 유저가 __root__ 권한을 가진 socket파일에 데이터를 전송 할 수 없기 때문에 발생하는 permission denied error이다. 이 에러를 해결하기 위해 socket파일의 소유자 정보를 변경해준다. 방법은 uwsgi.ini 파일 마지막에 `chown-socket = www-data`를 추가해 준다.
 
 ```
@@ -406,6 +417,8 @@ Host(7000)
 ```
 Host(7000) 으로 온 요청이 Container(80)으로 들어와서 Nginx으로 들어온 다음 Root URL이 ('/')인 경우에 /tmp/app.socket을 이용해서 uWSGI와 연결이 되고 config.wsgi을 통해 Django와 연결이 
 된 것이다.
+
+### Static File을 Nginx를 통해 처리
 
 그러나 아직 static, media 경로를 통해 들어온 파일들에 대한 처리가 되지 않는다. 이 설정을 하기위해 app.nginx파일에 local 설정을 추가해준다. 
 
