--- a/_posts/2018-09-14-macOS_개발환경.md
+++ b/_posts/2018-09-14-macOS_개발환경.md
@@ -141,8 +141,36 @@ plugins=(
   zsh-autosuggestions
 )
 ```  
+
+### macOS Sierra에서 원화(₩) 대신 백 쿼트(`) 입력하기
+
+macOS의 기본 설정은 한글 입력 상태에서는 백 쿼트(\`) 키를 누르면 원화(₩)가 입력된다. 따라서 markdown문서를 작성할 때 매우 불편하다. 한영키 모두에서 바로 백 쿼트(\`)키를 사용하기 위해서는 다음과 같이 폴더와 파일을 추가해주면 된다.
+
+1. ~/Library로 이동해서 KeyBindings 폴더를 추가
+
+2. ~/Library/KeyBindings에 DefaultkeyBinding.dict파일을 생성
+
+3. DefaultkeyBinding.dict 파일에 아래의 코드를 추가
+
+
+```
+# ~/Library/KeyBindings/DefaultkeyBinding.dict
+
+{
+	"₩" = ("insertText:", "`");
+}
+
+```
+
+
+
+
+
+
+
+
 #
 ---
 #
 > 위의 글의 내용들은 [lhy](https://lhy.kr/)강사님의 강의와 블로그, [subicura
-](https://subicura.com/)님의 글을 참고하여 작성하였습니다. 
+](https://subicura.com/)님의 블로그, [박민권 프로그래머](https://ani2life.com/wp/)님의 블로그를 참고하여 작성하였습니다. 
