--- a/_posts/2018-11-01-Deploy-1.md
+++ b/_posts/2018-11-01-Deploy-1.md
@@ -60,6 +60,8 @@ aws 가상 서버에 접속 후 기본 설정을 해주어야 한다. 먼저 loc
 - aws 가상 서버 기본 설정
 
 ```
+# 아래의 명령어를 순서대로 입력한다. 
+
 # 패키지 정보를 업데이트
 sudo apt-get update
 
@@ -77,7 +79,7 @@ sudo curl -L http://install.ohmyz.sh | sh
 sudo chsh ubuntu -s /usr/bin/zsh
 ```
 
-이렇게 명령어를 입력하고 ssh 명령어를 통해 aws에 재접속하면 다음과 같은 터미널 환경이 보인다.
+위의 명령어를 순서대로 입력하고 `exit`를 통해 나갔다가 ssh 명령어를 통해 aws에 재접속하면 다음과 같은 터미널 환경이 보인다.
 
 >  #ssh 명령어 <br>
 > 	$ ssh -i <.pem file Root> ubuntu@<인스턴스 퍼블릭 DNS>
@@ -115,9 +117,9 @@ alias <scp단축어>="ssh -i <.pem file Root> -r <전송할 파일의 경로> ub
 
 이 IAM(AWS Identity and Access Management)은 AWS 리소스에 대한 액세스를 안전하게 제어할 수 있는 웹 서비스다. IAM을 사용하여 리소스를 사용하도록 인증(로그인) 및 권한 부여(권한 있음)된 대상을 제어한다. [IAM 사이트](https://console.aws.amazon.com/iam/)에서 설정한다. 
 
-먼저 amazon사이트에 로그인 한 후 [IAM 사이트](https://console.aws.amazon.com/iam/)에 접속하면 IAM리소스 화면이 보인다. 여기서 사용자를 눌러준다. 그리고 `기존 정책 연결`에서 정책 필터에 `s3`를 검색하여 __`AmazonS3FullAccess`__를 선택한다. 이 __AmazonS3FullAccess__를 선택하면 `액세스 키 ID`와 `비밀 액세스 키`가 나오는데 이 두개는 화면이 넘어가면 다시 확인이 __불가능__하기 때문에 따로 저장해준다. 
+먼저 amazon사이트에 로그인 한 후 [IAM 사이트](https://console.aws.amazon.com/iam/)에 접속하면 IAM리소스 화면이 보인다. 여기서 사용자를 눌러준다. 그리고 `기존 정책 연결`에서 정책 필터에 `s3`를 검색하여 __AmazonS3FullAccess__를 선택한다. 이 __AmazonS3FullAccess__를 선택하면 __액세스 키 ID__와 __비밀 액세스 키__가 나오는데 이 두개는 화면이 넘어가면 다시 확인이 __불가능__하기 때문에 따로 저장해준다. 
 
-이제 boto3를 사용할 차례이다. 이 boto3는 Python 개발자가 Python 용 Amazon Web Services (AWS) SDK를 사용하여 S3 및 EC2와 같은 Amazon 서비스를 사용하는 소프트웨어를 작성할 수있게 도와준다. Boto는 사용하기 쉬운 객체 지향 API와 저급 직접 서비스 액세스를 제공한다. boto3의 사용법은 다음과 같다
+이제 boto3를 사용할 차례이다. 이 boto3는 Python 개발자가 Python 용 Amazon Web Services      (AWS) SDK를 사용하여 S3 및 EC2와 같은 Amazon 서비스를 사용하는 소프트웨어를 작성할 수있게 도와준다. Boto는 사용하기 쉬운 객체 지향 API와 저급 직접 서비스 액세스를 제공한다. boto3의 사용법은 다음과 같다
 
 ```
 # 터미널에서 `~` 위치로 이동한다.
