deploy3 file upload

--- a/_posts/2018-11-02-Deploy-2.md
+++ b/_posts/2018-11-02-Deploy-2.md
@@ -22,7 +22,7 @@ last_modified_at:
 comments: true
 ---
 
-- [이전 포스팅](https://mongkyo.github.io/dev/Deploy/)에 이어지는 내용입니다.
+- [이전 포스팅(Deploy(1) - AWS명령어 및 Docker시작하기)](https://mongkyo.github.io/dev/Deploy-1/)에 이어지는 내용입니다.
 
 # uWSGI와 Nginx
 
@@ -38,12 +38,12 @@ Nginx와 uWSGI를 도커에서 실행하기위해 지난 포스트에서 했던 
 
 ```
 # Docker를 ubuntu(v.18.04)에서 실행
-FROM    		ubuntu:18.04
+FROM    	ubuntu:18.04
 MAINTAINER 	dreamong91@gmail
 
 # -y 속성은 설치 도중 yes/no 가 나왔을 때 자동으로 yes를 선택하는 옵션
 RUN		apt -y update
-RUN 	apt -y dist-upgrade
+RUN 		apt -y dist-upgrade
 RUN		apt -y install python3-pip
 
 # Nginx, uWSGI 설치 (WebServer, WSGI)
@@ -52,18 +52,18 @@ RUN		pip3 install uwsgi
 
 # docker build할때의 PATH에 해당하는 폴더의 전체 내용을 
 # Image의 /srv/project/폴더 내부에 복사
-COPY	./srv/project/
-WORKDIR	/srv/project
+COPY		./srv/project/
+WORKDIR		/srv/project
 RUN		pip3 install -r requirements.txt
 
 # 프로세스를 실행할 명령
 WORKDIR		/srv/project/app
-CMD				python3 manage.py runserver 0:8000
+CMD		python3 manage.py runserver 0:8000
 
 # 현재 Django의 위치(ec2-deploy)의 파일들을 docker의 /srv/project/ 경로에 복사
-COPY	./srv/project/
+COPY		./srv/project/
 # /srv/project 로 이동
-WORKDIR	/srv/project
+WORKDIR		/srv/project
 # 이동한 위치에서 requirements.txt 안에 pip3 패키지들을 설치
 RUN		pip3 install -r requirements.txt
 
@@ -171,7 +171,7 @@ manage.py 파일을 보면 다음과 같은 코드가 있다.
 
 	os.environ.setdefault('DJANGO_SETTINGS_MODULE', 'config.settings')
 
-`os.environ.setdefault는 os.environ`라는 딕셔너리에 `DJANGO_SETTINGS_MODULE`가 있다면 그대로 두고 없으면 뒤의 `config.settings`를 넣는다는 뜻이다. 이 `os.environ`은 환경 변수를 나타낸다. 이 manage.py가 실행될 때 이 코드가 실행되는데 이 코드에서의 config.settings안의 `__init__ .py` 파일이 비어있으므로 오류가 난다. 따라서 직접 코드를 입력하여 환경 변수를 추가 해 주어야 한다.
+`os.environ.setdefault는 os.environ`라는 딕셔너리에 `DJANGO_SETTINGS_MODULE`가 있다면 그대로 두고 없으면 뒤의 `config.settings`를 넣는다는 뜻이다. 이 `os.environ`은 환경 변수를 나타낸다. 이 manage.py가 실행될 때 이 코드가 실행되는데 이 코드에서의 config.settings안의 `__init__.py` 파일이 비어있으므로 오류가 난다. 따라서 직접 코드를 입력하여 환경 변수를 추가 해 주어야 한다.
 
 	export DJANGO_SETTINGS_MODULE=confing.settings.<dev 또는 production>
 
@@ -384,7 +384,7 @@ RUN         ln -sf /etc/nginx/sites-available/app.nginx \
 ### permission denied Error
 
 
-docker안에서 `ps -aux`명령어를 입력하면 작업관리자 같은 내용이 쭉 나온다. 이 명령어는 유저 정보를 같이 보여주는데, 위에서 나온 502에러같은 경우 __www-data__ 유저가 __root__ 권한을 가진 socket파일에 데이터를 전송 할 수 없기 때문에 발생하는 permission denied error이다. 이 에러를 해결하기 위해 socket파일의 소유자 정보를 변경해준다. 방법은 uwsgi.ini 파일 마지막에 `chown-socket = www-data`를 추가해 준다.
+docker안에서 `ps -aux`명령어를 입력하면 작업관리자 같은 내용이 쭉 나온다. 이 명령어는 유저 정보를 같이 보여주는데, 위에서 나온 502에러같은 경우 '__www-data__' 유저가 '__root__' 권한을 가진 socket파일에 데이터를 전송 할 수 없기 때문에 발생하는 permission denied error이다. 이 에러를 해결하기 위해 socket파일의 소유자 정보를 변경해준다. 방법은 uwsgi.ini 파일 마지막에 `chown-socket = www-data`를 추가해 준다.
 
 ```
 # uwsgi.ini
@@ -501,7 +501,6 @@ DATABASES = {
     'default': {
         'ENGINE': 'django.db.backends.postgresql',
         'HOST': 'wps9th.cksojujm6f2c.ap-northeast-2.rds.amazonaws.com',
-        'NAME': 'dreamong91',
         'USER': '<본인이 설정한 ID>',
         'PASSWORD': '<본인이 설정한 password>',
         'PORT': 5432,
