--- a/_posts/2018-11-01-Deploy-1.md
+++ b/_posts/2018-11-01-Deploy-1.md
@@ -117,7 +117,7 @@ alias <scp단축어>="ssh -i <.pem file Root> -r <전송할 파일의 경로> ub
 
 이 IAM(AWS Identity and Access Management)은 AWS 리소스에 대한 액세스를 안전하게 제어할 수 있는 웹 서비스다. IAM을 사용하여 리소스를 사용하도록 인증(로그인) 및 권한 부여(권한 있음)된 대상을 제어한다. [IAM 사이트](https://console.aws.amazon.com/iam/)에서 설정한다. 
 
-먼저 amazon사이트에 로그인 한 후 [IAM 사이트](https://console.aws.amazon.com/iam/)에 접속하면 IAM리소스 화면이 보인다. 여기서 사용자를 눌러준다. 그리고 `기존 정책 연결`에서 정책 필터에 `s3`를 검색하여 __AmazonS3FullAccess__를 선택한다. 이 __AmazonS3FullAccess__를 선택하면 __액세스 키 ID__와 __비밀 액세스 키__가 나오는데 이 두개는 화면이 넘어가면 다시 확인이 __불가능__하기 때문에 따로 저장해준다. 
+먼저 amazon사이트에 로그인 한 후 [IAM 사이트](https://console.aws.amazon.com/iam/)에 접속하면 IAM리소스 화면이 보인다. 여기서 사용자를 눌러준다. 그리고 `기존 정책 연결`에서 정책 필터에 `s3`를 검색하여 '__AmazonS3FullAccess__'를 선택한다. 이 '__AmazonS3FullAccess__'를 선택하면 '__액세스 키 ID__'와 '__비밀 액세스 키__'가 나오는데 이 두개는 화면이 넘어가면 다시 확인이 '__불가능__'하기 때문에 따로 저장해준다. 
 
 이제 boto3를 사용할 차례이다. 이 boto3는 Python 개발자가 Python 용 Amazon Web Services      (AWS) SDK를 사용하여 S3 및 EC2와 같은 Amazon 서비스를 사용하는 소프트웨어를 작성할 수있게 도와준다. Boto는 사용하기 쉬운 객체 지향 API와 저급 직접 서비스 액세스를 제공한다. boto3의 사용법은 다음과 같다
 
@@ -174,7 +174,7 @@ s3.meta.client.upload_file('<올릴 파일 경로>', '<bucket 이름>', '<올릴
 
 ### Docker의 정의
 
-먼저 도커(Docker)를 설치하기에 앞서 간략하게 말하면, 도커는 컨테이너 기반의 오픈소스 가상화 플랫폼이다.  여기서 말하는 __컨테이너__는 __이미지__와 더불어서 도커에서 가장 중요한 개념이다. 
+먼저 도커(Docker)를 설치하기에 앞서 간략하게 말하면, 도커는 컨테이너 기반의 오픈소스 가상화 플랫폼이다.  여기서 말하는 '__컨테이너__'는 '__이미지__'와 더불어서 도커에서 가장 중요한 개념이다. 
 
 컨테이너는 서버에서 이야기하는 컨테이너와 비슷하다. 다양한 프로그램, 실행환경을 컨테이너로 추상화하고 동일한 인터페이스를 제공하여 프로그램의 배포 및 관리를 단순하게 해준다.
 
@@ -268,7 +268,7 @@ ec2-deploy
 
 > 위 파일중에 `requirements.txt` 와 `requirements-dev.txt` 파일을 나눈 것을 볼 수 있는데 이렇게 파일을 나눈 이유는 내 로컬 환경에서 `ipython`같은 패키지를 설치하였을 때 같이 설치되는 파일들이 있다. 이들을 `pip freeze`명령어를 사용해 저장하면 쓰지 않는 패키지까지 같이 저장이된다. docker에서 `requirements.txt` 파일을 사용할 때 이렇게 필요없는 패키지들을 빼주기 위해서 따로 `requirements-dev.txt` 파일을 만들어서 관리해 준다. 
 
-이제 __Dockerfile__을 만들었으면 그 안에 내용을 추가해준다. 이 Dockerfile의 역할을 Docker container을 실행할 때 이 Dockerfile안에 있는 명령어들을 사용하여 컨테이너에 필요한 환경들을 설치 및 설정해 준다. 
+이제 '__Dockerfile__'을 만들었으면 그 안에 내용을 추가해준다. 이 Dockerfile의 역할을 Docker container을 실행할 때 이 Dockerfile안에 있는 명령어들을 사용하여 컨테이너에 필요한 환경들을 설치 및 설정해 준다. 
 
 `Dockerfile`
 
