--- a/_posts/2018-11-01-Deploy-1.md
+++ b/_posts/2018-11-01-Deploy-1.md
@@ -68,6 +68,9 @@ sudo apt-get update
 # 설치되어 있는 패키지들을 의존성 검사하며 업그레이드
 sudo apt-get dist-upgrade
 
+# pip3설치 
+sudo apt-get install python3-pip
+
 # zsh 설치
 sudo apt-get install zsh
 
@@ -93,6 +96,19 @@ scp명령어는 내 로컬 서버에 있는 파일,폴더들을 가상 서버에
 
 	$ scp -i <.pem file Root> -r <전송할 파일의 경로> ubuntu@<인스턴스 퍼블릭 DNS>:<전송받을 aws가상 서버 경로>
 	
+scp명령어로 django 설정 파일을 가져온 뒤에 보안 그룹에 인바운드 포트 범위에 8000을 추가해준다. 그리고  EC2 ubuntu terminal에서 django파일의 settings.py에 아래의 내용을 추가한다. 
+	
+	ALLOWED_HOST = ['.amazonaws.com']
+	
+그리고 아래의 명령어로 runserver를 해준다. 
+
+	python3 manage.py runserver 0:8000
+	
+로컬로 다시 돌아와서 <인스턴스 퍼블릭 DNS>:8000 으로 주소창에 입력후 접속하면 로켓이 나타난다.
+
+![Start Django](/assets/deploy/StartDjango.png)
+
+
 
 #### ssh, scp 명령어를 alias를 사용하여 단축어 지정하기
 
