--- a/_posts/2018-11-01-Deploy-1.md
+++ b/_posts/2018-11-01-Deploy-1.md
@@ -96,7 +96,11 @@ scp명령어는 내 로컬 서버에 있는 파일,폴더들을 가상 서버에
 
 	$ scp -i <.pem file Root> -r <전송할 파일의 경로> ubuntu@<인스턴스 퍼블릭 DNS>:<전송받을 aws가상 서버 경로>
 	
-scp명령어로 django 설정 파일을 가져온 뒤에 보안 그룹에 인바운드 포트 범위에 8000을 추가해준다. 그리고  EC2 ubuntu terminal에서 django파일의 settings.py에 아래의 내용을 추가한다. 
+scp명령어로 django 설정 파일을 가져온 뒤에 보안 그룹에 인바운드 포트 범위에 8000을 추가해준다. 
+
+![포트 범위 추가](/assets/deploy/portsetting.png)
+
+그리고  EC2 ubuntu terminal에서 django파일의 settings.py에 아래의 내용을 추가한다. 
 	
 	ALLOWED_HOST = ['.amazonaws.com']
 	
