--- a/_posts/2018-11-01-Deploy-1.md
+++ b/_posts/2018-11-01-Deploy-1.md
@@ -22,9 +22,8 @@ comments: true
 
 ## AWS scp, ssh 사용하기 
 
-### ssh, scp 명령어 
 
-#### ssh명령어 사용하기
+### ssh명령어 사용하기
 
 	$ ssh -i <.pem file Root> ubuntu@<인스턴스 퍼블릭 DNS>
 
@@ -90,7 +89,7 @@ sudo chsh ubuntu -s /usr/bin/zsh
 ![사진](/assets/deploy/photo1.png)
 
 
-#### scp 명령어 사용하기
+### scp 명령어 사용하기
 
 scp명령어는 내 로컬 서버에 있는 파일,폴더들을 가상 서버에 옮길 때 사용한다. 예를 들면 내 로컬 서버에서 작업 중이던 Django 파일을 aws가상 서버로 옮길 때 사용한다. scp명령어는 다음 양식에 맞춰서 사용한다. 
 
@@ -110,11 +109,13 @@ scp명령어로 django 설정 파일을 가져온 뒤에 보안 그룹에 인바
 	
 로컬로 다시 돌아와서 <인스턴스 퍼블릭 DNS>:8000 으로 주소창에 입력후 접속하면 로켓이 나타난다.
 
+
 ![Start Django](/assets/deploy/StartDjango.png)
 
 
 
-#### ssh, scp 명령어를 alias를 사용하여 단축어 지정하기
+
+### ssh, scp 명령어를 alias를 사용하여 단축어 지정하기
 
 ssh, scp 명령어를 사용하다 보면 가독성이 떨어지고 너무 길기 때문에 귀찮다. 따라서 `.zshrc`에서 alias를 통해 ssh, scp 명령어를 단축어로 지정한다.
 
