--- a/_posts/2018-11-05-Deploy-3.md
+++ b/_posts/2018-11-05-Deploy-3.md
@@ -214,6 +214,13 @@ AWS_STORAGE_BUCKET_NAME = secrets['AWS_STORAGE_BUCKET_NAME']
 
 > 키 값들을 넣어줄때는 외부에 공개되면 나중에 해킹을 당하거나 불이익을 받을 수 있으므로 .secrets폴더에 넣고 키 값을 불러와서 사용하는게 좋다. 좋은게 아니라 그렇게 해줘야 한다. 그리고 다시한번 .secrets폴더가 .gitignore에 추강되어있는지 확인한다! (production.py에도 동일하게 작성)
 
+```
+# production.py
+AWS_S3_SIGNATURE_VERSION = 's3v4'
+AWS_S3_REGION_NAME = 'ap-northeast-2'
+```
+위의 내용은 S3버전 및 지역을 설정해주는 것이다. dev.py에는 필요가 없으나 production.py에는 추가해주는 것이 좋다. 
+
 - 위의 코드를 완성하고 파일을 다시 업로드하고 확인하면 정상적으로 올라가는 것을 볼 수 있다. 
 
 ### bucket에 폴더 구분해서 올리기
