--- a/_posts/2018-11-05-Deploy-3.md
+++ b/_posts/2018-11-05-Deploy-3.md
@@ -56,9 +56,9 @@ DATABASES = secrets['DATABASES']
 
 서버하나에 DB는 여러개 존재할 수 있다. 우리는 progreSQL을 사용할 것이므로 progreSQL설치를 해준다. 
 
-	$ brew install progreSQL
+	$ brew install postgreSQL
 
-설치가 완료되면 터미널을 새로 실행시켜준다. psql은 파이썬을 쓰듯, 인터렉티브하게 progreSQL쪽에 데이터를 보낼 수 있다. psql을 활용해서 이를 Local에 DB를 만들고 Django에 쓸 수도 있다. 
+설치가 완료되면 터미널을 새로 실행시켜준다. psql은 파이썬을 쓰듯, 인터렉티브하게 postgreSQL쪽에 데이터를 보낼 수 있다. psql을 활용해서 이를 Local에 DB를 만들고 Django에 쓸 수도 있다. 
 
 명령어는 다음과 같다. 
 
