--- a/_posts/2018-09-14-macOS_개발환경.md
+++ b/_posts/2018-09-14-macOS_개발환경.md
@@ -38,6 +38,20 @@ __확인__
 $ gcc
 clang: error: no input files
 ```
+
+## key Repeat Fast
+
+macOS의 키보드 설정에서 반복 지연 시간과 키 반복을 조절할 수 있다. 하지만 이 마저도 느리다고 느껴질 때가 있는데(vim을 사용하다보면 가끔 느낌) 이럴때 아래의 설정을 통해 기본 값보다 더 빠르게 만들어 줄 수 있다.
+
+```
+
+defaults write -g InitialKeyRepeat -int 10 # 기본 최소값은 15 (225 ms)
+
+defaults write -g KeyRepeat -int 1 # 기본 최소값은 2 (30 ms)
+
+```
+
+
 ## homebrew
 macOS에서 각종 커맨드라인 프로그램들을 손쉽게 설치하게 해주는 mac용 패키지 매니저입니다. 이를 통해 여러 개발 도구들을 설치할 수 있습니다. macOS를 사용하시는 분들이라면 필수적으로 설치해야하는 패키지 매니저입니다.
 
