--- a/_posts/2018-12-16-Git Flow를 통한 버전관리.md
+++ b/_posts/2018-12-16-Git Flow를 통한 버전관리.md
@@ -25,7 +25,7 @@ git을 사용하면서 프로젝트를 진행하면서 branch관리의 어려움
 
 ## macOS에 설치 
 
-다른 개발 환경에서 설치하는 법은 잘 모른다. 내가 macOS를 사용하고 있기 때문에 macOS 설치 방법에 대해서만 다룰 것이다.(다른 개발환경에서 설치하는 방법은 [git-flow github](https://github.com/nvie/gitflow)에 나와있다.) macOS에 설치하는 방법은 아주 간단하다. brew를 통해서 설치해 준다. (brew가 안깔려있다면 __[macOS 개발환경 구축하기](https://mongkyo.github.io/dev/macOS-%EA%B0%9C%EB%B0%9C%ED%99%98%EA%B2%BD-%EA%B5%AC%EC%B6%95%ED%95%98%EA%B8%B0/)__를 참고하도록 한다.)
+다른 개발 환경에서 설치하는 법은 잘 모른다. 내가 macOS를 사용하고 있기 때문에 macOS 설치 방법에 대해서만 다룰 것이다.(다른 개발환경에서 설치하는 방법은 [git-flow github](https://github.com/nvie/gitflow)에 나와있다.) macOS에 설치하는 방법은 아주 간단하다. brew를 통해서 설치해 준다. (brew가 안깔려있다면 [macOS 개발환경 구축하기](https://mongkyo.github.io/dev/macOS-%EA%B0%9C%EB%B0%9C%ED%99%98%EA%B2%BD-%EA%B5%AC%EC%B6%95%ED%95%98%EA%B8%B0/)를 참고하도록 한다.)
 
 ```
 $ brew install git-flow
