--- a/_posts/2018-09-28-Django수업 정리.md
+++ b/_posts/2018-09-28-Django수업 정리.md
@@ -26,7 +26,7 @@ template를 만드는 방법으로 django파일 밑에 개별적으로 templates
 
 파일 객체를 참조하는 방법
 
-```
+```python
 1.
 with open(path, 'rt') as f:
 	content = f.read()
