[fix] study 파일들 출처 밝히기

--- a/_posts/2019-01-03-[파이썬코딩의기술] 01장 파이썬 다운 생각.md
+++ b/_posts/2019-01-03-[파이썬코딩의기술] 01장 파이썬 다운 생각.md
@@ -1,5 +1,5 @@
 ---
-title: "[파이썬코딩의기술] - Study01"
+title: "[파이썬 코딩의 기술] - Study01"
 categories: 
   - study
 tags:
@@ -15,6 +15,10 @@ toc_sticky: true
 last_modified_at:
 comments: true
 ---
+
+
+> 본 포스팅은 __파이썬 코딩의 기술__ 이라는 책을 참고하여 개인 공부를 하면서 정리하고 있습니다. 문제 될 시 삭제하겠습니다.
+
 
 # [파이썬 코딩의 기술] 01장 파이썬 다운 생각
 
