--- a/_posts/2019-01-07-변수.md
+++ b/_posts/2019-01-07-변수.md
@@ -1,5 +1,5 @@
 ---
-title: "[컴퓨터사이언스 부트캠프 with 파이썬] - Study01"
+title: "[컴퓨터 사이언스 부트캠프 with 파이썬] - Study01"
 categories: 
   - study
 tags:
@@ -17,7 +17,7 @@ last_modified_at:
 comments: true
 ---
 
-> 본 포스팅은 파이썬코딩의기술 이라는 책을 참고하여 개인 공부를 하면서 정리하고 있습니다. 문제 될 시 삭제하겠습니다.
+> 본 포스팅은 __컴퓨터 사이언스 부트캠프 with 파이썬__ 이라는 책을 참고하여 개인 공부를 하면서 정리하고 있습니다. 문제 될 시 삭제하겠습니다.
 
 
 # 변수
