[add] 정수와 실수

--- a/_posts/2019-01-07-Chapter1_변수.md
+++ b/_posts/2019-01-07-Chapter1_변수.md
@@ -28,6 +28,7 @@ comments: true
 
 컴퓨터에서는 데이터 단위로 비트를 사용한다. 예를 들어 8비트 컴퓨터라고 하면 한번에 데이터를 전송하는 통로가 8개가 존재한다고 이해하면 된다. 따라서 비트가 높은 컴퓨터일수록 한 번에 보낼 수 있는 데이터 양이 많아진다. 또한 이 비트 수에 따라 메모리 주소를 표현하는데, 32비트 컴퓨터의 메모리 주소는 32비트로 표현하고, 64비트 컴퓨터는 64비트로 표현한다.
 
+![데이터 전송](https://thebook.io/img/006950/017_1.jpg)
 
 ### 메모리 이해하기
 
