[fix] 정수와 실수.md

--- a/_posts/2019-01-09chapter2_정수와 실수.md
+++ b/_posts/2019-01-09chapter2_정수와 실수.md
@@ -53,7 +53,7 @@ exp값은 지수와 bias값을 더해서 구한다. 여기서 bias 값은 2<sup>
 4. 부호 -> 0, 지수부 -> 1001, 가수부 -> 1111
 5. 여기서 가수부가 3비트만 할당되므로 뒷자리 1을 생략해준다. 가수부 -> 111
 6. 부동소수점 0 1001 111
-
+7. 이진수 0100 1111를 16진수로 변환하면 0x4f이다.
 
 ## 엡실론과 정밀도
 
