[fix] 정수와 실수.md

--- a/_posts/2019-01-09-chapter2_정수와 실수.md
+++ b/_posts/2019-01-09-chapter2_정수와 실수.md
@@ -1,3 +1,25 @@
+---
+title: "[컴퓨터 사이언스 부트캠프 with 파이썬] - Study02"
+categories: 
+  - study
+tags:
+    - python
+    - study
+    - computer science
+author_profile: true
+
+toc: true
+toc_label: "My Talbe of Contents"
+toc_icon: "cog"
+toc_sticky: true
+
+last_modified_at:
+comments: true
+---
+
+> 본 포스팅은 __컴퓨터 사이언스 부트캠프 with 파이썬__ 이라는 책을 참고하여 개인 공부를 하면서 정리하고 있습니다. 문제 될 시 삭제하겠습니다.
+
+
 # 정수와 실수
 
 ## 보수
