[fix] 정수와 실수.md

--- a/_posts/2019-01-09-chapter2_정수와 실수.md
+++ b/_posts/2019-01-09-chapter2_정수와 실수.md
@@ -77,6 +77,8 @@ exp값은 지수와 bias값을 더해서 구한다. 여기서 bias 값은 2<sup>
 6. 부동소수점 0 1001 111
 7. 이진수 0100 1111를 16진수로 변환하면 0x4f이다.
 
+> 부동소수점을 계산할 때는 보수의 개념을 사용하지 않는다. 
+
 ## 엡실론과 정밀도
 
 ### 엡실론(epsilon)
