[add] 2019-01-15-chapter5_함수.md

--- a/_posts/2019-01-15-chapter5_함수.md
+++ b/_posts/2019-01-15-chapter5_함수.md
@@ -124,3 +124,33 @@ if __name__ == "__main__":
 >>> locals in outer : a = 100, b = 3
 ```
 
+## 인자 전달 방식에 따른 분류
+
+함수는 인자(argument) 전달 방식에 따라 값에 의한 전달(call by value)과 참조에 의한 전달(call by reference)로 나누어진다. 하지만 파이썬은 이 두 전달 방식을 따르지 않고 다른 방식을 사용한다.
+
+### 값에 의한 전달
+
+값에 의한 전달(call by value)는 인자를 전달할 때 값을 복사해 전달하는 경우를 말한다. 파이썬은 이 값에 의한 전달 방식을 사용하지 않기 때문에 예제를 c++코드로 알아 보자.
+
+```c++
+#include <iostrem>
+using namespace std;
+
+void chang_value(int x, int value)
+{
+
+    x = value;
+    cout << "x : " << x << " in change_value" << endl;
+}
+
+int main(void)
+{
+    
+    int x = 10;
+    change_value(x, 20);
+    cout << "x: " << x << " in main" << endl;
+    
+    
+    return 0;
+}
+```
