--- a/_posts/2019-01-15-chapter5_함수.md
+++ b/_posts/2019-01-15-chapter5_함수.md
@@ -27,7 +27,7 @@ comments: true
 
 ### 전역 변수
 
-__전역 변수(global variable)__는 전체 영역에서 접근할 수 있는 변수이다. 어느곳에서든 접근이 가능하다
+ __전역 변수(global variable)__는 전체 영역에서 접근할 수 있는 변수이다. 어느곳에서든 접근이 가능하다
 
 ```python
 g_var = 10
@@ -62,7 +62,7 @@ if __name__ == "__main__":
 
 ### 지역 변수
  
-__지역 변수(local variable)__은 전역 변수와는 반대 개념이다. 말 그대로 특정 지역(함수 내부)에서만 접근 할 수 있는 변수이다. 이 지역 변수는 함수 바깥에서는 접근할 수 없고, 함수가 호출될 때 생성되었다가 호출이 끝나면 사라진다. 
+ __지역 변수(local variable)__은 전역 변수와는 반대 개념이다. 말 그대로 특정 지역(함수 내부)에서만 접근 할 수 있는 변수이다. 이 지역 변수는 함수 바깥에서는 접근할 수 없고, 함수가 호출될 때 생성되었다가 호출이 끝나면 사라진다. 
 
 ```python
 g_var = 10
@@ -153,4 +153,9 @@ int main(void)
     
     return 0;
 }
+
+>>> x : 20 in change_value
+>>> x : 10 in main
 ```
+
+위의 c++코드를 잠깐 설명하면 change\_value() 함수는 인자x와 value를 받아 x에 value를 대입한다. 위 코드를 통해 전역 변수와 지역 변수의 개념 없이 이해를 해보면 당연히 change\_value() 함수를 호출하면서 value 인자에 20을 전달했기 때문에 지역 변수 x 값을 20으로 바뀔것이라고 예상이 된다. 하지만 실제 결과는 x가 변경되지 않고 출력이된다. 이러한 결과가 나온 이유는 __함수에 x가 전달될 때 값에 의한 전달 방식으로 전달되었기 때문이다.__
