--- a/_posts/2019-01-15-chapter5_함수.md
+++ b/_posts/2019-01-15-chapter5_함수.md
@@ -27,7 +27,8 @@ comments: true
 
 ### 전역 변수
 
- __전역 변수(global variable)__는 전체 영역에서 접근할 수 있는 변수이다. 어느곳에서든 접근이 가능하다
+
+**전역 변수(global variable)**는 전체 영역에서 접근할 수 있는 변수이다. 어느곳에서든 접근이 가능하다
 
 ```python
 g_var = 10
@@ -61,8 +62,9 @@ if __name__ == "__main__":
 분명 func함수 내부에서 g\_var변수를 20으로 변경해주었는데 함수가 실행되는 순간에만 잠시 변경되었을 뿐 값이 전혀 변경되지 않았다. 사실 이는 함수 실행 순간에 변수가 변경되었었던 것이 아니라 함수 안에서 새로운 지역 변수 g\_var을 생성한 것이다. 이름만 같을 뿐 전역 변수 g\_var와 지역 변수 g\_var는 전혀 다른 함수이다. 
 
 ### 지역 변수
+
  
- __지역 변수(local variable)__은 전역 변수와는 반대 개념이다. 말 그대로 특정 지역(함수 내부)에서만 접근 할 수 있는 변수이다. 이 지역 변수는 함수 바깥에서는 접근할 수 없고, 함수가 호출될 때 생성되었다가 호출이 끝나면 사라진다. 
+**지역 변수(local variable)**은 전역 변수와는 반대 개념이다. 말 그대로 특정 지역(함수 내부)에서만 접근 할 수 있는 변수이다. 이 지역 변수는 함수 바깥에서는 접근할 수 없고, 함수가 호출될 때 생성되었다가 호출이 끝나면 사라진다. 
 
 ```python
 g_var = 10
