--- a/_posts/2018-11-01-Deploy-1.md
+++ b/_posts/2018-11-01-Deploy-1.md
@@ -173,7 +173,8 @@ $ pip install ipython
 
 ```
 [1]: import boto3
-[2]: client.create_bucket(
+[2]: client = boto3.client('s3')
+[3]: client.create_bucket(
 		  Bucket='<bucket 이름>',
 		  CreateBucketConfiguration={
 		  		'LocationConstraint': 'ap-northeast-2'
