--- a/_posts/면접질문정리.md
+++ b/_posts/면접질문정리.md
@@ -1,7 +1,6 @@
 # 면접질문정리
 
-
-## 슬로워크 
+- 첫번째
 
 1. Docker 도커를 사용해 봤는데 장점과 단점
 2. AWS를 사용한 이유
@@ -10,7 +9,7 @@
 5. 개발자로의 가치관 (앞으로 어떤 개발자가 되고 싶은지)
 6. IT업계에 야근이 많은데 그에대한 생각
 
-## 피디젠 
+- 두번째
 
 1. 설문조사 웹 페이지를 만든다면 얼마나 걸릴거 같냐
 2. Flask와 Django의 차이 
