[modified] 2019-03-05 python(1).md

--- a/_posts/2019-03-05-Python(1).md
+++ b/_posts/2019-03-05-Python(1).md
@@ -23,16 +23,16 @@ comments: true
 # get()함수는 None인 경우 error를 유발하지 않음
 dic.get('b')
 
-
 dic['e']
 >>> error
 
 print(dic.get('e'))
 >>> None
 ```
+
 > 없는 키 값을 넣었을 때 dic['e']은 에러를, dic() 함수는 None을 반환한다.
  	
-```
+```python
 if dic.get('e'):
 	print(dic['e'])
 	
@@ -58,7 +58,7 @@ dic.get('e', 0)
 ```python
 dic.pop((1, 2, 3))
  	
-value를 반환하고 사라진다
+# value를 반환하고 사라진다
 ```
  	
 - setdefault()
@@ -237,7 +237,7 @@ bin(0b1100 ^ 0b1010)
 
 논리연산의 방식으로 아래의 규칙을 따른다. 
 
-```
+```python
 # []는 참조하지 않기때문에 마지막에 참조한 [1, 2]를 반환
 
 [1, 2] or []
@@ -256,9 +256,7 @@ bin(0b1100 ^ 0b1010)
 
 >>> []
 
-```
 
-```
 if [] and [1, 2]:
 	print('거짓')
 	
