--- a/_posts/2019-03-06-Python(2).md
+++ b/_posts/2019-03-06-Python(2).md
@@ -56,7 +56,7 @@ c
 def sum_int(*args):
     print(type(args))
     
->>> <class 'tuple'>
+>>> <class "tuple">
 
 def sum_int(*args):
     print(args)
@@ -76,7 +76,7 @@ sum_int(1, 2, 3)
 ```
 > 함수 실행에 *을 붙여주면 unpacking이 된다.
 
-```
+```python
 li = [3, 4, 5, 6]
 sum_int(*li)
 >>> 18
@@ -103,7 +103,7 @@ sum_int(*li, **kwargs)
 
 ## 삼항연산자
 
-```
+```python
 a = 10
 
 # 일반 if문
