[modified] 2019-03-06 python(2).md

--- a/_posts/2019-03-06-Python(2).md
+++ b/_posts/2019-03-06-Python(2).md
@@ -56,7 +56,7 @@ c
 def sum_int(*args):
     print(type(args))
     
->>> <class "tuple">
+>>> <class tuple>
 
 def sum_int(*args):
     print(args)
