--- a/_posts/2019-03-06-Python(2).md
+++ b/_posts/2019-03-06-Python(2).md
@@ -129,7 +129,9 @@ def func(num):
     func(num-1)
 ```
 
-### factorial
+## Algorism
+
+### Factorial
 
 1. 점화식 구현 : fac(num) = fac(num-1) * num
 2. 기저 조건 : if num == 1 then return 1
@@ -146,7 +148,7 @@ for num in range(1, 5+1):
 >>> 1 2 6 24 120 
 ```
 
-### fibonacci
+### Fibonacci
 
 1. 점화식 구현 : fibonacci(num) = fibonacci(num-1) + fibonacci(num -2)
 2. 기저 조건 : if num == 1 then return 1
