[modified] 2019-03-07-python(3).md

--- a/_posts/2019-03-07-Python(3).md
+++ b/_posts/2019-03-07-Python(3).md
@@ -1,21 +1,18 @@
 ---
-
 title: "python(3)"
-categories:
-
-- Python
+categories: 
+  - Python
 tags:
     - python
-    author_profile: true
+author_profile: true
 
 toc: true
 toc_label: "My Talbe of Contents"
 toc_icon: "cog"
 toc_sticky: true
 
-## last_modified_at:
+last_modified_at:
 comments: true
-
 ---
 
 ## First Class Function
