[create] feed.xml

--- a/_posts/2018-09-09-macOS 개발환경 구축하기.md
+++ b/_posts/2018-09-09-macOS 개발환경 구축하기.md
@@ -15,6 +15,10 @@ toc_label: "My Talbe of Contents"
 toc_icon: "cog"
 toc_sticky: true
 
+sitemap :
+  changefreq : daily
+  priority : 1.0
+
 last_modified_at:
 comments: true
 ---
