--- a/_posts/2019-03-05-Python(1).md
+++ b/_posts/2019-03-05-Python(1).md
@@ -29,7 +29,6 @@ dic['e']
 print(dic.get('e'))
 >>> None
 ```
-
 > 없는 키 값을 넣었을 때 dic['e']은 에러를, dic() 함수는 None을 반환한다.
  	
 ```python
@@ -50,6 +49,11 @@ key값에 e가 있으면 value를 주고, 없으면 0을 반환해라
 
 ```python
 dic.get('e', 0)
+```
+key값에 e가 있으면 value를 주고, 없으면 0을 반환한 후 그 반환값에 1을 더해라
+
+```python
+dic.get('e', 0) + 1
 ```
  	
  	
