[modified] Iterator.md

--- a/_posts/2019-03-28-Iterator.md
+++ b/_posts/2019-03-28-Iterator.md
@@ -1,3 +1,21 @@
+---
+title: "python-Iterator"
+categories: 
+  - python
+tags:
+    - python
+    - Iterator
+author_profile: true
+
+toc: true
+toc_label: "My Talbe of Contents"
+toc_icon: "cog"
+toc_sticky: true
+
+last_modified_at:
+comments: true
+---
+
 # Iterator
 
 ## Iterator의 기본 개념
