[modified] post text

--- a/_posts/2019-03-25-알고리즘(1).md
+++ b/_posts/2019-03-25-알고리즘(1).md
@@ -1,3 +1,21 @@
+---
+title: "Algorism - Sort, Search"
+categories: 
+  - Algorism
+tags:
+    - python
+    - Algorism
+author_profile: true
+
+toc: true
+toc_label: "My Talbe of Contents"
+toc_icon: "cog"
+toc_sticky: true
+
+last_modified_at:
+comments: true
+---
+
 # 알고리즘(1) - 정렬(Sort)과 탐색(Search)
 
 정렬과 탐색은 여러 알고리즘들 중에서 가장 많이 사용되는 것 들이다. 
