--- a/_posts/2019-03-28-Iterator.md
+++ b/_posts/2019-03-28-Iterator.md
@@ -20,12 +20,22 @@ comments: true
 
 ## Iterator의 기본 개념
 
-데이터 스트림을 나타내는 객체이다. 이터레이터 타입의 객체들은 next()메서드를 통해 반복 호출 할 수 있다. 만약 next()메서드를 통해 모든 데이터를 호출하고 나면 StopIteration이라는 에러가 발생한다. 다시 말해 Iterator의 특징을 요약하면 다음과 같다.
+이터레이터(iterator)란 무엇인가? 이는 next()를 호출할 때 다음값을 생성해내는 상태를 가진 헬퍼 객체이다. next()를 가진 모든 객체는 이터레이터이다.
+
+또한 이터레이터는 데이터 스트림을 나타내는 객체라고도 할 수 있다. 이터레이터 타입의 객체들은 next()메서드를 통해 반복 호출 할 수 있다. 만약 next()메서드를 통해 모든 데이터를 호출하고 나면 StopIteration이라는 에러가 발생한다. 다시 말해 Iterator의 특징을 요약하면 다음과 같다.
 
 - Iterator는 next()메서드를 통해 값을 하나씩 반환
 - next()로 데이터를 불러올 수 없으면 StopIteration이라는 에러를 발생시킴
 
-공식문서에는 다음과 같이 나와있다.
+> Iterator객체를 동작할 때는 next()메서드를 사용한다. 이러한 동작 방식을 Lazy evaluation(게으른 연산)이라고 한다. 이 Lazy evaluation은 필요한 경우에만 객체를 불러와 사용하는데, 불러오기 전까지는 메모리 공간을 사용하지 않으므로 다른 객체가 메모리를 사용할 수 있게 된다.
+
+
+## 게으른 팩토리 (a lazy factory)
+
+이 게으른 팩토리는 이터레에터와 제너레이터(Generator)에 바탕이 되는 개념이다. 
+
+바깥에서보면 이터레이터는 값을 요청할때까지 유휴(idle) 상태인 게으른 팩토리처럼 보인다. 이는 하나의 값을 생성한 후에 다시 유휴 상태가 된다.
+
 
 ## Iterator Customizing
 
