--- a/_posts/2019-03-28-Iterator.md
+++ b/_posts/2019-03-28-Iterator.md
@@ -20,7 +20,7 @@ comments: true
 
 ## Iterator의 기본 개념
 
-이터레이터(iterator)란 무엇인가? 이는 next()를 호출할 때 다음값을 생성해내는 상태를 가진 헬퍼 객체이다. next()를 가진 모든 객체는 이터레이터이다.
+이터레이터(iterator)란 무엇인가? 이는 next()를 호출할 때 다음값을 생성해내는 상태를 가진 헬퍼 객체이다. 이터레이터 객체를 확인하는 가장 쉬운 방법은 dir()메서드를 활용해 객체 안에 `__iter__`가 존재하는 지를 확인하는 것이다.
 
 또한 이터레이터는 데이터 스트림을 나타내는 객체라고도 할 수 있다. 이터레이터 타입의 객체들은 next()메서드를 통해 반복 호출 할 수 있다. 만약 next()메서드를 통해 모든 데이터를 호출하고 나면 StopIteration이라는 에러가 발생한다. 다시 말해 Iterator의 특징을 요약하면 다음과 같다.
 
@@ -67,7 +67,18 @@ type(it)
 
 ## Iterator 와 Iterable
 
-Iterator는 이렇게 하나씩 분리하여 호출 할 수 있는 하나의 객체라고 생각하면 편하다. 이에 반해 Iterable은 어떠한 객체들의 순회 가능하다는 것을 나타내는 용어이다. 이 Iterable 객체들은 iter()메서드를 통해 iterator 객체로 바꿀 수 있다. 
+
+Iterable 객체는 요소를 한 번에 하나씩 가져올 수 있는 객체이고, 이터레이터는 `__next__` 메서드를 사용해서 차례대로 값을 꺼낼 수 있는 객체이다. Iterator는 next()를 사용하여 하나씩 호출 할 수 있는 객체인 것이다. 이 Iterable 객체들은 iter()메서드를 통해 iterator 객체로 사용할 수 있다. 
+
+## Iterator unpacking
+
+
+이터레이터와 제너레이터(Generator) 변수 여러개에 값을 저장하는 언패킹(unpacking)이 가능하다
+
+```python
+a, b, c = Iterator()
+```
+
 
 ## 반복문에서의 Iterator
 
