[modified] All post change post_name

--- a/_posts/2018-12-27-vim 단축키 정리.md
+++ b/_posts/2018-12-27-vim 단축키 정리.md
@@ -1,4 +1,20 @@
-# Vim
+---
+title: "2018.12.27 - Vim"
+categories: 
+  - Dev
+tags:
+    - mac
+    - vim
+author_profile: true
+
+toc: true
+toc_label: "My Talbe of Contents"
+toc_icon: "cog"
+toc_sticky: true
+
+last_modified_at:
+comments: true
+---
 
 ### 설치
 
