--- a/_posts/2019-01-09-chapter2_정수와 실수.md
+++ b/_posts/2019-01-09-chapter2_정수와 실수.md
@@ -1,5 +1,5 @@
 ---
-title: "[컴퓨터 사이언스 부트캠프 with 파이썬] - Study02"
+title: "2019.01.09 - [컴퓨터 사이언스 부트캠프 with 파이썬] - Study02"
 categories: 
   - study
 tags:
