--- a/_posts/2019-01-07-Chapter1_변수.md
+++ b/_posts/2019-01-07-Chapter1_변수.md
@@ -1,5 +1,5 @@
 ---
-title: "[컴퓨터 사이언스 부트캠프 with 파이썬] - Study01"
+title: "2019.01.07 - [컴퓨터 사이언스 부트캠프 with 파이썬] - Study01"
 categories: 
   - study
 tags:
