--- a/_posts/2019-01-15-chapter5_함수.md
+++ b/_posts/2019-01-15-chapter5_함수.md
@@ -1,5 +1,5 @@
 ---
-title: "[컴퓨터 사이언스 부트캠프 with 파이썬] - Study03"
+title: "2019.01.15 - [컴퓨터 사이언스 부트캠프 with 파이썬] - Study03"
 categories: 
   - study
 tags:
