[add] sidebar option

--- a/_posts/deploy/2018-11-02-Deploy-2.md
+++ b/_posts/deploy/2018-11-02-Deploy-2.md
@@ -13,6 +13,8 @@ tags:
     - postgreSQL
 author_profile: true
 
+sidebar:
+  nav: "docs"
 toc: true
 toc_label: "My Talbe of Contents"
 toc_icon: "cog"
