--- a/_posts/dev/2018-09-09-macOS 개발환경 구축하기.md
+++ b/_posts/dev/2018-09-09-macOS 개발환경 구축하기.md
@@ -10,6 +10,8 @@ tags:
     - oh-my-zsh
 author_profile: true
 
+sidebar:
+  nav: "docs"
 toc: true
 toc_label: "My Talbe of Contents"
 toc_icon: "cog"
