--- a/_posts/study/2019-01-03-[파이썬코딩의기술] 01장 파이썬 다운 생각.md
+++ b/_posts/study/2019-01-03-[파이썬코딩의기술] 01장 파이썬 다운 생각.md
@@ -7,6 +7,8 @@ tags:
     - 파이썬 코딩의 기술
 author_profile: true
 
+sidebar:
+  nav: "docs"
 toc: true
 toc_label: "My Talbe of Contents"
 toc_icon: "cog"
