--- a/_posts/study/2019-01-07-Chapter1_변수.md
+++ b/_posts/study/2019-01-07-Chapter1_변수.md
@@ -8,6 +8,8 @@ tags:
     - computer science
 author_profile: true
 
+sidebar:
+  nav: "docs"
 toc: true
 toc_label: "My Talbe of Contents"
 toc_icon: "cog"
