[test] test sidebar

--- a/_posts/study/2019-01-15-chapter5_함수.md
+++ b/_posts/study/2019-01-15-chapter5_함수.md
@@ -1,10 +1,10 @@
 ---
 title: "2019.01.15 - [컴퓨터 사이언스 부트캠프 with 파이썬] - Study03"
 categories: 
-  - study
+  - Study
 tags:
     - python
-    - study
+    - Study
     - computer science
 author_profile: true
 
