--- a/_posts/study/2019-01-03-[파이썬코딩의기술] 01장 파이썬 다운 생각.md
+++ b/_posts/study/2019-01-03-[파이썬코딩의기술] 01장 파이썬 다운 생각.md
@@ -1,10 +1,9 @@
 ---
 title: "2019.01.03 - [파이썬 코딩의 기술] - Study01"
 categories: 
-  - study
+  - Study
 tags:
     - python
-    - 파이썬 코딩의 기술
 author_profile: true
 
 sidebar:
